--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ body {
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.5)
     ),
-    url(img/header-1.jpeg);
+    url("../img/header-1.jpeg");
   background-repeat: none;
   background-size: cover;
   background-position: center;
