--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  z-index: 1;
 }
 
 .navigation-heading {
@@ -646,4 +647,140 @@ body {
 .copyright-text {
   color: #aaa;
   font-size: 1.2rem;
+}
+
+@media (max-width: 1400px) {
+  .customer-card-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .customer-card:first-child {
+    margin-bottom: 3rem;
+  }
+  .main-part {
+    flex-direction: column;
+  }
+  .footer-list {
+    display: flex;
+  }
+  .footer-list-item {
+    margin-right: 3rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .about-us {
+    flex-direction: column;
+    padding-bottom: 20rem;
+  }
+  .about-us-content {
+    margin-bottom: 13rem;
+  }
+  .image {
+    width: 25rem;
+  }
+}
+
+@media (max-width: 900px) {
+  .banner {
+    text-align: center;
+  }
+  .banner-heading {
+    font-size: 4.7rem;
+  }
+  .banner-text {
+    font-size: 2.6rem;
+  }
+  .banner-btn {
+    width: 16rem;
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 750px) {
+  .customer-card {
+    flex-direction: column;
+    width: 20rem;
+  }
+  .customer-img {
+    margin-left: 0;
+  }
+  .footer-list {
+    display: block;
+  }
+}
+
+@media (max-width: 500px) {
+  .navigation {
+    width: 28rem;
+  }
+  .navigation-search-input {
+    width: 20rem;
+  }
+  .hotel-heading {
+    font-size: 2rem;
+    margin: auto 0;
+  }
+  .banner {
+    height: 100%;
+    margin-top: -10rem;
+  }
+  .banner-heading {
+    font-size: 3rem;
+  }
+  .banner-text {
+    font-size: 2rem;
+  }
+  .about-us {
+    padding-bottom: 15rem;
+  }
+  .about-us-heading {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  .sub-heading {
+    font-size: 2rem;
+    text-align: center;
+  }
+  .about-us-content {
+    padding: 5rem;
+  }
+  .image {
+    width: 13rem;
+  }
+  .common-heading {
+    font-size: 2rem;
+  }
+  .small-underline {
+    width: 5rem;
+  }
+  .big-underline {
+    width: 12rem;
+  }
+  .room-card-heading {
+    font-size: 1.5rem;
+  }
+  .room-price {
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .room-card-btn {
+    width: 12rem;
+    padding: 1rem 0.5rem;
+    font-size: 1rem;
+  }
+  .customer-para {
+    margin-left: 3.5rem;
+    font-size: 1.4rem;
+    width: 80%;
+  }
+  .main-part {
+    padding: 2rem;
+  }
+  .footer-input {
+    width: 12rem;
+  }
+  .copyright-text {
+    font-size: 0.7rem;
+  }
 }
